[fix] convert to DTO